--- a/web/pom.xml
+++ b/web/pom.xml
@@ -112,13 +112,19 @@
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf</artifactId>
-      <version>2.1.4.RELEASE</version>
+      <version>3.0.1.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf-spring4</artifactId>
-      <version>2.1.4.RELEASE</version>
+      <version>3.0.1.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>nz.net.ultraq.thymeleaf</groupId>
+      <artifactId>thymeleaf-layout-dialect</artifactId>
+      <version>2.0.0</version>
+    </dependency>
+
     <!-- 4)Spring test -->
     <dependency>
       <groupId>org.springframework</groupId>
