--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,11 +16,21 @@
     </dependency>
 
     <!-- 1.日志 -->
-    <!-- 实现slf4j接口并整合 -->
+    <!-- 实现slf4j接口并整合:slf4j+logback -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.24</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+      <version>1.1.11</version>
+    </dependency>
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
-      <version>1.1.7</version>
+      <version>1.1.11</version>
     </dependency>
 
     <!-- 2.数据库 -->
@@ -36,7 +46,7 @@
       <version>0.9.1.2</version>
     </dependency>
 
-    <!-- DAO: MyBatis -->
+    <!-- DAO: MyBatis依赖 -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
