--- a/web/pom.xml
+++ b/web/pom.xml
@@ -58,7 +58,7 @@
       <version>1.2.3</version>
     </dependency>
 
-    <!-- 3.Servlet web -->
+    <!-- 3.Servlet controller -->
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
@@ -108,7 +108,7 @@
       <artifactId>spring-tx</artifactId>
       <version>4.1.7.RELEASE</version>
     </dependency>
-    <!-- 3)Spring web -->
+    <!-- 3)Spring controller -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
