--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,8 @@
         <module>web</module>
         <module>analysis</module>
     </modules>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
