--- a/web/pom.xml
+++ b/web/pom.xml
@@ -174,6 +174,12 @@
     </dependency>
 
   </dependencies>
+
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+
   <build>
     <finalName>web</finalName>
   </build>
