--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.24</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.8.1</version>
+        </dependency>
     </dependencies>
 
 
