--- a/web/pom.xml
+++ b/web/pom.xml
@@ -119,6 +119,22 @@
       <artifactId>spring-webmvc</artifactId>
       <version>4.1.7.RELEASE</version>
     </dependency>
+
+    <!-- 4)Spring test -->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>4.1.7.RELEASE</version>
+    </dependency>
+
+    <!-- Map工具类 -->
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <version>3.2</version>
+    </dependency>
+
+    <!--添加thymeleaf支持-->
     <dependency>
       <groupId>org.thymeleaf</groupId>
       <artifactId>thymeleaf</artifactId>
@@ -135,43 +151,13 @@
       <version>2.0.1</version>
     </dependency>
 
-    <!-- 4)Spring test -->
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>4.1.7.RELEASE</version>
-    </dependency>
-
-    <!-- redis客户端:Jedis -->
-    <dependency>
-      <groupId>redis.clients</groupId>
-      <artifactId>jedis</artifactId>
-      <version>2.7.3</version>
-    </dependency>
-    <dependency>
-      <groupId>com.dyuproject.protostuff</groupId>
-      <artifactId>protostuff-core</artifactId>
-      <version>1.0.8</version>
-    </dependency>
-    <dependency>
-      <groupId>com.dyuproject.protostuff</groupId>
-      <artifactId>protostuff-runtime</artifactId>
-      <version>1.0.8</version>
-    </dependency>
-
-    <!-- Map工具类 -->
-    <dependency>
-      <groupId>commons-collections</groupId>
-      <artifactId>commons-collections</artifactId>
-      <version>3.2</version>
-    </dependency>
-
     <!--项目间依赖-->
     <dependency>
       <groupId>com.babel.platform</groupId>
       <artifactId>platform</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+
     <!-- spring-redis实现 -->
     <dependency>
       <groupId>org.springframework.data</groupId>
@@ -184,6 +170,7 @@
       <artifactId>jedis</artifactId>
       <version>2.9.0</version>
     </dependency>
+
     <!--添加序列化依赖-->
     <dependency>
       <groupId>com.dyuproject.protostuff</groupId>
