--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>jedis</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.7.0</version>
+        </dependency>
     </dependencies>
 
 
