--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -41,9 +41,9 @@
             <version>2.8.1</version>
         </dependency>
         <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.7.0</version>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 
